syntax = "proto3";

message RsaPacket {
  bytes public_key_pkcs1 = 1;
  string username = 2;
}
